@@ -3579,3 +3579,4 @@
   EntityConnectionImpl renamed to DefaultEntityConnection
   EntityDefinition.staticData field added
   EntityLookupField.lookupEnabledState added as a hack to prevent the triggering of a lookup by closing the empty result message
+  EntityTableCellRenderers.DefaultEntityTableCellRenderer made public
